[gd_scene load_steps=7 format=3 uid="uid://bbioafljtadve"]

[ext_resource type="Script" path="res://ScenarioScript/InventorySS/InventoryUI.gd" id="1_ncyq5"]
[ext_resource type="Texture2D" uid="uid://bsnlepp448ry8" path="res://Assets/Inventory/InventoryBackground.png" id="2_0kxeu"]
[ext_resource type="Texture2D" uid="uid://dl2kiw27nu0dy" path="res://Assets/Items/Notebook.png" id="3_p0rfq"]
[ext_resource type="FontFile" uid="uid://cfawtlhvqxpna" path="res://Assets/Font/Compressed.TTF" id="3_w2xfx"]
[ext_resource type="Texture2D" uid="uid://oaxsupepqibf" path="res://Assets/Inventory/InventoryGrid.png" id="3_xq4hs"]
[ext_resource type="AudioStream" uid="uid://c5euakdvxgsrm" path="res://Assets/Music/Buttons/ButtonPress.mp3" id="5_hlo4s"]

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource("1_ncyq5")

[node name="InventoryBackground" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = -0.044
anchor_top = -0.052
anchor_right = -0.044
anchor_bottom = -0.052
offset_left = -0.311996
offset_top = -0.304001
offset_right = 1310.69
offset_bottom = 712.696
mouse_filter = 2
texture = ExtResource("2_0kxeu")
expand_mode = 1

[node name="PagesSection" type="RichTextLabel" parent="InventoryBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.157
anchor_top = 0.114
anchor_right = 0.157
anchor_bottom = 0.114
offset_left = 0.172989
offset_top = -0.282005
offset_right = 400.173
offset_bottom = 537.718
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("3_w2xfx")
theme_override_font_sizes/normal_font_size = 25

[node name="ItemsSection" type="GridContainer" parent="InventoryBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.231
anchor_right = 0.5
anchor_bottom = 0.231
offset_left = -0.5
offset_top = 0.296997
offset_right = 383.5
offset_bottom = 403.297
mouse_filter = 2
columns = 6

[node name="GridBackground" type="TextureRect" parent="InventoryBackground"]
layout_mode = 2
anchor_left = 0.397
anchor_top = 0.022
anchor_right = 0.397
anchor_bottom = 0.022
offset_left = -0.467041
offset_top = 0.313999
offset_right = 713.533
offset_bottom = 699.314
mouse_filter = 2
texture = ExtResource("3_xq4hs")
expand_mode = 1
stretch_mode = 5

[node name="InventoryButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.904
anchor_top = 0.776
anchor_right = 0.904
anchor_bottom = 0.776
offset_left = -0.408081
offset_top = 0.151978
offset_right = 108.592
offset_bottom = 139.152
icon = ExtResource("3_p0rfq")
flat = true
expand_icon = true

[node name="InventorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hlo4s")
volume_db = -10.0
